docs: add official contact details and README sync

--- a/index.html
+++ b/index.html
@@ -561,6 +561,15 @@
         </ul>
     </section>
 
+    <section id="contact">
+        <h2>14. Contact</h2>
+        <p>For technical inquiries or submission feedback, please contact the PQIE Research Group at:</p>
+        <ul>
+            <li><strong>Email:</strong> <a href="mailto:dixadholakiya@gmail.com">dixadholakiya@gmail.com</a></li>
+            <li><strong>Website:</strong> <a href="https://pqie.network">https://pqie.network</a></li>
+        </ul>
+    </section>
+
     <footer>
         <strong>did:pqie DID Method Specification v1.0</strong><br />
         PQIE Research Group &mdash; Licensed under
