--- a/index.html
+++ b/index.html
@@ -319,6 +319,18 @@ did:pqie:12345678:90abcdef:1234abcd</code></pre>
     </ul>
 </section>
 
+
+    <h3>2.7 The Ledger-Agnostic Property</h3>
+    <p>A core innovation of the PQIE framework is its natively <strong>ledger-agnostic</strong> architecture. Because the entirety of the DID Document is encapsulated within a Ring-LWE KEM Digital Envelope <em>before</em> transmission, the resulting cryptographic payload (or its hash pointer) can be securely written to <strong>any</strong> underlying distributed ledger technology (DLT) or key-value store.</p>
+    <p>This means <code>did:pqie</code> is not locked to a specific blockchain. The method natively abstracts the storage layer via a Ledger-Agnostic Interface (Layer E), allowing implementations to anchor identities on:</p>
+    <ul>
+        <li><strong>Permissioned identity ledgers</strong> (e.g., Hyperledger Indy)</li>
+        <li><strong>Public smart contracts</strong> (e.g., Ethereum, Polygon via EVM mappings)</li>
+        <li><strong>Decentralized file configurations</strong> (e.g., IPFS + Filecoin combinations)</li>
+    </ul>
+    <p>Verifiers and resolvers simply fetch the on-chain payload via the respective ledger adapter and proceed with standard decapsulation and signature verification, entirely decoupled from the consensus mechanism or tokenomics of the underlying host chain.</p>
+
+</section>
 <section>
     <h2>3. Future Scope: PQIE in Web 3.0</h2>
     <p>Because PQIE is ledger-agnostic, it can plug into diverse Web 3.0 runtimes. DeFi platforms can embed quantum-safe KYC proofs, healthcare networks can share encrypted patient IDs across hospitals, supply-chain consortia can bind tamper-proof product DIDs to digital twins, and metaverse environments can issue long-lived, privacy-preserving avatar credentials.</p>
